force-app/main/default/objects/Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Text</type>
    <length>255</length>
</CustomField>