force-app/main/default/objects/Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Type 1</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Type 2</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Type 3</fullName>
        </picklistValues>
    </picklist>
</CustomField>